premise-core/tests/snapshots/notes_snapshots__entity_cooccurrence_extraction.snap
---
source: premise-core/tests/notes_snapshots.rs
expression: normalize_facts(facts)
---
[
  {
    "type": "relationship",
    "source": "imported",
    "entities": [
      "Hero",
      "Mentor"
    ],
    "category": "co-occurrence",
    "fact": "Hero and Mentor appear together in scene 'The Beginning'",
    "evidence": [
      "test.prem:21"
    ],
    "confidence": 0.7,
    "status": "developing"
  },
  {
    "type": "relationship",
    "source": "imported",
    "entities": [
      "Hero",
      "Villain"
    ],
    "category": "co-occurrence",
    "fact": "Hero and Villain appear together in scene 'The Beginning'",
    "evidence": [
      "test.prem:21"
    ],
    "confidence": 0.7,
    "status": "developing"
  },
  {
    "type": "relationship",
    "source": "imported",
    "entities": [
      "Hero",
      "Villain"
    ],
    "category": "co-occurrence",
    "fact": "Hero and Villain appear together in scene 'The Confrontation'",
    "evidence": [
      "test.prem:24"
    ],
    "confidence": 0.7,
    "status": "developing"
  },
  {
    "type": "relationship",
    "source": "imported",
    "entities": [
      "Mentor",
      "Villain"
    ],
    "category": "co-occurrence",
    "fact": "Mentor and Villain appear together in scene 'The Beginning'",
    "evidence": [
      "test.prem:21"
    ],
    "confidence": 0.7,
    "status": "developing"
  }
]
