premise-core/tests/snapshots/notes_snapshots__entity_trait_extraction.snap
---
source: premise-core/tests/notes_snapshots.rs
expression: normalize_facts(facts)
---
[
  {
    "type": "trait",
    "source": "imported",
    "entity": "Hero",
    "category": "description",
    "fact": "A brave warrior with a mysterious past",
    "evidence": [
      "test.prem:3"
    ],
    "confidence": 1.0
  },
  {
    "type": "trait",
    "source": "imported",
    "entity": "Villain",
    "category": "description",
    "fact": "A dark sorcerer seeking ultimate power",
    "evidence": [
      "test.prem:5"
    ],
    "confidence": 1.0
  },
  {
    "type": "trait",
    "source": "imported",
    "entity": "Mentor",
    "category": "description",
    "fact": "An wise old sage who guides the Hero",
    "evidence": [
      "test.prem:4"
    ],
    "confidence": 1.0
  }
]
